--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-wireguard",
-  "version": "1.1.51",
+  "version": "1.0",
   "description": "WireGuard bridge for React Native",
   "main": "index.ts",
   "scripts": {
@@ -9,13 +9,6 @@
   "keywords": [
     "react-native"
   ],
-  "author": "Cosku Bas",
-  "license": "Apache-2.0",
-  "peerDependencies": {
-    "react-native": "^0.41.2",
-    "react-native-swift": "^0.3.0"
-  },
-  "dependencies": {
-    "react-native-webview": "^5.2.0"
-  }
+  "author": "Cosku Bas, Ammar Ahmed",
+  "license": "MIT"
 }
